router: pool deliveries were invisible to the dashboard and Prometheus — the collector map was copied before any pool existed
Staging 2026-09-14: a queue showed 91 of 91 processed while every pool
showed 0. The pool factory creates one PoolMetricsCollector per pool into
a map; Router copied that map once at construction (putAll) and the
monitoring API's State took Map.copyOf of the result — both snapshots taken
before the first config fetch creates any pool, so no pool ever had a
visible collector. Both are now live read-only views of the factory's own
map. Pinned by RouterApiTest (State built first, the pool created through
the factory second: /monitoring/pool-stats and /metrics report the
delivery) and RouterPoolMetricsTest (Router.poolMetrics() sees a pool
configured after build); each copy put back fails exactly its test.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01CeP28brqSxWmKybFc3ayrp